# CSAAT-dev

./: .gitignore  README.md  pyproject.toml
backend/: generate.py
backend/api/: models.py  urls.py
backend/api/migrations/: 0001_initial.py  0002_auto_20210502_0845.py  0003_rename_video_clip_videoclips_video.py  0004_auto_20210507_1009.py  0005_videos_thumbnail_name.py  0006_alter_videoclips_video.py  0007_alter_videoclips_name.py  0008_alter_videoclips_duration.py  0009_auto_20210509_2327.py
backend/api/views/: antypical_children_views.py  typical_children_views.py  video_clips_views.py  videos_views.py
backend/backend/: settings.py  urls.py
backend/videoSlicer/: asset-manifest.json  index2.html  manifest.json  videoSlicerIndex.html
backend/videoSlicer/static/css/: main.a5a0ea91.chunk.css.map
backend/videoSlicer/static/js/: 2.315bdc77.chunk.js.LICENSE.txt  2.315bdc77.chunk.js.map  2.f5c5a395.chunk.js  (+15 more)
backend/videoUploader/: asset-manifest.json  videoUploaderIndex.html
videoUploader/public/: index.html
videoUploader/src/: index.css
videoslicer/: package-lock.json  package.json
videoslicer/public/: index.html
videoslicer/src/: App.js  App.module.css  index.css
videoslicer/src/actions/: Types.js  VideoActions.js
videoslicer/src/reducers/: NavigationReducer.js  VideoReducer.js  index.js
videouploader/: package-lock.json  package.json
videouploader/public/: index.html
videouploader/src/: App.js  App.module.css  index.css
videouploader/src/actions/: Types.js  VideoActions.js
videouploader/src/reducers/: ChildReducer.js  VideoReducer.js
(+82 files in other folders)
